--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 body {
-  background-color: indigo;
+  background-color: green;
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0;
   padding: 0;
+  min-width: 320px;
 }
 
 .game-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
   height: 100vh;
   width: 100vw;
 }
@@ -19,46 +20,162 @@ canvas {
   border: 4px solid #ff6600;
   border-radius: 8px;
   background-color: #feff9d;
+  margin-bottom: 3vh;
 }
 
 .buttons-container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  width: 70%;
+  gap: 0.75em;
   margin: 0 auto;
-  width: 100%;
+  margin-bottom: 3vh;
 }
 
 button {
-  background-color: #fdef05;
-  border-radius: 8px;
-  border-color: #ff6600;
-  font-family: inherit;
   margin: 0;
-  padding: 5px 20px;
-  width: 100px;
-}
-button:not(:last-child) {
-  margin-right: 10px;
+  font-family: inherit;
+  font-size: clamp(1rem, 3vw, 2rem);
+  background-color: #00a6ed;
+  border: 1px solid #00a6ed;
+  border-radius: 5px;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
 }
 
 .messages {
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
   margin: 0 auto;
-  width: 80%;
+  width: 70%;
   max-width: 460px;
 }
 
 p {
-  display: block;
   margin: 0;
+  min-width: 120px;
+  width: max-content;
+  margin-bottom: 1.5vh;
+  font-size: clamp(1rem, 3vw, 2rem);
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
   width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-buttons {
+  display: flex;
+  padding-top: 5px;
+  gap: 10px;
+}
+
+.modal-buttons button {
+  background-color: #3d3c3c60;
+  color: #dedede60;
+  border: none;
+  width: 100px;
+  cursor: pointer;
+}
+
+.modal-buttons button:hover {
+  background-color: green;
+  color: #feff9d;
+  transition: 0.2s;
+}
+
+.end-game {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: green;
+}
+
+.win-game {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.win-game h1 {
+  font-size: 4rem;
+}
+
+.win-game p {
+  font-size: 2rem;
+  text-align: center;
+}
+
+.show {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.show-end-game {
+  display: flex;
+}
+
+.show-win-game {
+  display: flex;
+}
+
+.emoji-background {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+}
+
+.emoji-background::before {
+  content: "";
+  position: absolute;
+  top: -10%;
+  left: -10%;
+  width: 200%;
+  height: 200%;
+  transform: rotate(-5deg);
+  z-index: -1;
+  background-image: url("https://images.emojiterra.com/google/android-12l/512px/1f43c.png"),
+    linear-gradient(45deg, red, blue);
+  background-repeat: repeat;
+  background-size: 4%;
+  filter: brightness(0.1);
 }
 
 @media (max-width: 440px) {
   button {
-    margin-top: 25px;
+    margin-top: 5px;
   }
 
   #up #down {
